...
                            retryApproval: {},
                            openPipelines: {}
                        )
                    }
                }
                .navigationTitle(
                    "Merge Request"
                )
                .navigationBarTitleDisplayMode(
                    .inline
                )
                .background(
                    Color.glabCanvas
...
